add:user auth feature added
