# app/Http/Controllers/Controller.php
@@ -15,6 +15,16 @@ use OpenApi\Annotations as OA;
  *     url=L5_SWAGGER_CONST_HOST,
  *     description="Localhost API Server"
  * )
+ *
+ * @OA\SecurityScheme(
+ *     type="http",
+ *     description="Use a bearer token to access protected endpoints",
+ *     name="Authorization",
+ *     in="header",
+ *     scheme="bearer",
+ *     bearerFormat="JWT",
+ *     securityScheme="sanctum"
+ * )
  */
 abstract class Controller
 {
